# ndarray

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.sh
benchmark/include/: benchmark_generator.hpp
core/: CMakeLists.txt
core/include/: ndarray.hpp  ndarray_utils.hpp  ndarray_validation.hpp
core/src/: main.cpp  ndarray.cpp  ndarray_utils.cpp  ndarray_validation.cpp  utils.cpp
examples/: CMakeLists.txt
examples/src/: example_at.cpp  example_constructor.cpp  example_element_wise.cpp  reshape.cpp
examples/src/api/: example_1_constructor.cpp  example_3_get_set_subarray.cpp  example_4_arithmetic_operators.cpp  example_5_relational_operators.cpp  example_7_reshape.cpp  example_arithmetic_operators.cpp  example_constructor.cpp  example_get_subarray.cpp  example_relational_operators.cpp  example_reshape.cpp
examples/src/api/functions/: example_constructor.cpp  example_reshape.cpp
examples/src/api/indices_get_set/: example_get_set_scalar.cpp  example_get_subarray.cpp
examples/src/api/operators/: example_arithmetic_operators.cpp  example_relational_operators.cpp
src/: ndarray.cpp  ndarray.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_constructor.cpp  test_copy.cpp  test_indices_access.cpp  test_operators.cpp  test_view.cpp
tests/catch2/: CMakeLists.txt
tests/include/: data.hpp  data_generator.hpp
tests/src/: test_at.cpp  test_constructor.cpp  test_copy.cpp  test_copy_at.cpp  test_indices_access.cpp  test_operators.cpp  test_reshape.cpp  test_view.cpp
tests/src/api/: test_1_constructor.cpp  test_2_get_set_scalar.cpp  test_3_get_set_subarray.cpp  test_4_arithmetic_operators.cpp  test_4_get_subarray_copy.cpp  test_5_arithmetic_operators.cpp  test_5_relational_operators.cpp  test_6_relational_operators.cpp  test_7_reshape.cpp
tests/src/api/functions/: test_constructor.cpp  test_reshape.cpp
tests/src/api/indices_get_set/: test_get_set_scalar.cpp  test_get_subarray.cpp  test_get_subarray_copy.cpp
tests/src/api/operators/: test_arithmetic_operators.cpp  test_relational_operators.cpp
tests/src/internals/: test_cartesian_product.cpp  test_get_flat_index.cpp
